src/objects/Clinical_Calendar_Note__c.object
<CustomObject>
    <fields>
        <fullName>Calendar_Note__c</fullName>
        <label>Calendar Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Clinical Calendar Notes</relationshipLabel>
        <relationshipName>Clinical_Calendar_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Note_Date__c</fullName>
        <label>Note Date</label>
        <type>Date</type>
    </fields>
    <label>Clinical Calendar Note</label>
    <nameField>
        <displayFormat>CNOTE-{0000}</displayFormat>
        <label>Clinical Calendar Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Calendar Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>